Website/Internal-about: Upgrade The Machine section
* The FreeBSD project thanks Bytemark and Equinix for their
generously donated hardware and networking.
* Add Sonic.net, LLC

Discussed by email with philip@

--- a/website/content/en/internal/about.adoc
+++ b/website/content/en/internal/about.adoc
@@ -14,10 +14,8 @@ image:../../gifs/powerlogo.gif[Powered by FreeBSD]
 
 Naturally, all systems in the FreeBSD.org cluster run FreeBSD. The hardware and network connection have been generously provided by:
 
-* https://www.bytemark.co.uk/[Bytemark Hosting]
 * Cloud and SDN Laboratory at https://www.bbtower.co.jp/en/corporate/[BroadBand Tower, Inc]
 * https://www.cs.nycu.edu.tw/[Department of Computer Science, National Yang Ming Chiao Tung University]
-* https://deploy.equinix.com/[Equinix]
 * https://internet.asn.au/[Internet Association of Australia]
 * https://www.isc.org/[Internet Systems Consortium]
 * https://www.inx.net.za/[INX-ZA]
@@ -28,6 +26,7 @@ Naturally, all systems in the FreeBSD.org cluster run FreeBSD. The hardware and 
 * https://nic.br/[NIC.br]
 * https://www.teleservice.net/[Teleservice Skåne AB]
 * https://your.org/[Your.Org]
+* https://www.sonic.com/[Sonic.net, LLC]
 
 -- and other link:../../donations/donors[contributors] to the FreeBSD project.
 
