Website-Usergroups: Add Saudi Arabia BSD user group
PR:	285578

--- a/website/content/en/usergroups/_index.adoc
+++ b/website/content/en/usergroups/_index.adoc
@@ -351,6 +351,9 @@ For more information please visit our link:https://bsdtw.org[website].
 link:https://ambug.org[Armenia BSD User Group]::
 We're a community of BSD Hackers, Unix Sysadmins and Unix-like system users who gather once a month (online and offline) to discuss BSD Unix related topics.
 
+link:https://arbian.org[Saudi Arabia BSD User Group]::
+Arbian open source community in Saudi Arabia, *BSD one of part of the community, represents and supports Arabic language.
+
 [[oceania]]
 === Oceania
 
