Website-portmgr: Update to new releng article
PR:	259927

--- a/website/content/en/portmgr/_index.adoc
+++ b/website/content/en/portmgr/_index.adoc
@@ -43,7 +43,7 @@ The central reference book for FreeBSD ports submitters, maintainers, and commit
 * https://pkg-status.freebsd.org/[FreeBSD Ports Build Cluster] +
 These machines continually build packages on all possible combinations of OS release and CPU architecture (in our terminology, `build environments`), and produce error logs of problems that are encountered along the way.
 
-* link:{releng}#release-build[FreeBSD Release Engineering for Third Party Packages] +
+* link:{freebsd-releng}[FreeBSD Release Engineering] +
 Describes the approach used by the FreeBSD release engineering team to produce a high quality package set suitable for official FreeBSD release media, with specific emphasis on how to split up the packages for the release media, and how to verify that a package set is consistent.
 
 * link:{committers-guide}[FreeBSD Committer's Guide] +
