Website-where: Change heading level in Development Snapshots
PR:	273383

--- a/website/content/en/where.adoc
+++ b/website/content/en/where.adoc
@@ -224,7 +224,7 @@ The word `CURRENT` is sometimes a source of confusion:
 * if you are looking for the _current version_ of FreeBSD, you most likely want a `RELEASE` version (see above) – **not** `CURRENT` – `CURRENT` has special meaning in the development process.
 
 [[download-snapshots]]
-=== Development Snapshots
+== Development Snapshots
 
 See link:../snapshots/[FreeBSD Snapshot Releases].
 
