Website - Release notes: Fix option for tail and head in 14.0R
PR: 285460

--- a/website/content/en/releases/14.0R/relnotes.adoc
+++ b/website/content/en/releases/14.0R/relnotes.adoc
@@ -361,7 +361,7 @@ A new man:fwget[8] utility inspects the system for peripherals that need firmwar
 For now, only the PCI subsystem is supported, and only video firmware for Intel and AMD GPUs is known.
 gitref:d198b8774d2c[repository=src] gitref:d198b8774d2c[repository=src] (Sponsored by Beckhoff Automation GmbH & Co. KG)
 
-The usability of man:head[1] and man:tail[1] has been improved by consistently supporting the `-q` and `-h` options, allowing numbers with SI suffixes, and removing the 2^31 limit on lines for man:head[1].
+The usability of man:head[1] and man:tail[1] has been improved by consistently supporting the `-q` and `-v` options, allowing numbers with SI suffixes, and removing the 2^31 limit on lines for man:head[1].
 gitref:643ac419fafb[repository=src]
 
 man:makefs[8] now has experimental ZFS support.
