__FreeBSD_version bumped for V*_ISDEV()

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -241,6 +241,11 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |June 3, 2025
 |15.0-CURRENT after pulling in dma-mapping.h changes from drm-kmod to LinuxKPI.
 
+|1500062
+|gitref:567e6250c003eeb251b4bc8dbe60d2adabab2988[repository="src",length=12]
+|August 17, 2025
+|15.0-CURRENT after introduction of VTYPE_ISDEV(), VN_ISDEV(), and VATTR_ISDEV().
+
 |===
 
 [[versions-14]]
