doc: Update source files (en .po), for translations

--- a/documentation/content/en/articles/pgpkeys/_index.po
+++ b/documentation/content/en/articles/pgpkeys/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-06-29 21:20+0100\n"
+"POT-Creation-Date: 2025-08-17 20:54+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2765,221 +2765,233 @@ msgstr ""
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1434
 #, no-wrap
-msgid "`{miwi}`"
+msgid "`{obiwac}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1437
 #, no-wrap
-msgid "`{nate}`"
+msgid "`{miwi}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1440
 #, no-wrap
-msgid "`{twinterg}`"
+msgid "`{nate}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1443
 #, no-wrap
-msgid "`{def}`"
+msgid "`{twinterg}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1446
 #, no-wrap
-msgid "`{wollman}`"
+msgid "`{def}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1449
 #, no-wrap
-msgid "`{joerg}`"
+msgid "`{wollman}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1452
 #, no-wrap
-msgid "`{ygy}`"
+msgid "`{joerg}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1455
 #, no-wrap
-msgid "`{emax}`"
+msgid "`{ygy}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1458
 #, no-wrap
-msgid "`{oshogbo}`"
+msgid "`{emax}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1461
 #, no-wrap
-msgid "`{riggs}`"
+msgid "`{oshogbo}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1464
 #, no-wrap
-msgid "`{egypcio}`"
+msgid "`{riggs}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1467
 #, no-wrap
-msgid "`{bz}`"
+msgid "`{egypcio}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1470
 #, no-wrap
-msgid "`{dsl}`"
+msgid "`{bz}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1473
 #, no-wrap
-msgid "`{zeising}`"
+msgid "`{dsl}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1476
 #, no-wrap
-msgid "`{phantom}`"
+msgid "`{zeising}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1479
 #, no-wrap
-msgid "`{tz}`"
+msgid "`{phantom}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1482
 #, no-wrap
-msgid "`{rigoletto}`"
+msgid "`{tz}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1485
 #, no-wrap
-msgid "`{kaktus}`"
+msgid "`{rigoletto}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1488
 #, no-wrap
-msgid "`{samm}`"
+msgid "`{kaktus}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1491
 #, no-wrap
-msgid "`{arrowd}`"
+msgid "`{samm}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1494
 #, no-wrap
-msgid "`{ronald}`"
+msgid "`{arrowd}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1497
 #, no-wrap
-msgid "`{meta}`"
+msgid "`{ronald}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1500
 #, no-wrap
-msgid "`{rnagy}`"
+msgid "`{meta}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1503
 #, no-wrap
-msgid "`{vvd}`"
+msgid "`{rnagy}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1506
 #, no-wrap
-msgid "`{gbe}`"
+msgid "`{vvd}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1509
 #, no-wrap
-msgid "`{bnovkov}`"
+msgid "`{gbe}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1512
 #, no-wrap
-msgid "`{ivy}`"
+msgid "`{bnovkov}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1515
 #, no-wrap
-msgid "`{khorben}`"
+msgid "`{ivy}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1518
 #, no-wrap
-msgid "`{vexeduxr}`"
+msgid "`{khorben}`"
 msgstr ""
 
-#. type: Title ==
-#: documentation/content/en/articles/pgpkeys/_index.adoc:1522
+#. type: Title ===
+#: documentation/content/en/articles/pgpkeys/_index.adoc:1521
 #, no-wrap
-msgid "Other Cluster Account Holders"
+msgid "`{vexeduxr}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1524
 #, no-wrap
-msgid "`{bk}`"
+msgid "`{alven}`"
 msgstr ""
 
-#. type: Title ===
-#: documentation/content/en/articles/pgpkeys/_index.adoc:1527
+#. type: Title ==
+#: documentation/content/en/articles/pgpkeys/_index.adoc:1528
 #, no-wrap
-msgid "`{deb}`"
+msgid "Other Cluster Account Holders"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1530
 #, no-wrap
-msgid "`{debdrup}`"
+msgid "`{bk}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1533
 #, no-wrap
-msgid "`{dutchdaemon}`"
+msgid "`{deb}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1536
 #, no-wrap
-msgid "`{keymaster}`"
+msgid "`{debdrup}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1539
 #, no-wrap
-msgid "`{mwlucas}`"
+msgid "`{dutchdaemon}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1542
+#, no-wrap
+msgid "`{keymaster}`"
+msgstr ""
+
+#. type: Title ===
+#: documentation/content/en/articles/pgpkeys/_index.adoc:1545
+#, no-wrap
+msgid "`{mwlucas}`"
+msgstr ""
+
+#. type: Title ===
+#: documentation/content/en/articles/pgpkeys/_index.adoc:1548
 #, no-wrap
 msgid "`{dhw}`"
 msgstr ""
