--- a/documentation/content/en/books/fdp-primer/translations/_index.po
+++ b/documentation/content/en/books/fdp-primer/translations/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2025-08-17 20:54+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -355,8 +355,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/translations/_index.adoc:180
 msgid ""
-"Use git diff command to generate a diff and send it to the "
-"link:reviews.freebsd.org/[reviews system]."
+"Use git diff command to generate a diff and send it to the link:https://"
+"reviews.freebsd.org/[reviews system]."
 msgstr ""
 
 #. type: delimited block . 4
