--- a/documentation/content/en/books/handbook/basics/_index.po
+++ b/documentation/content/en/books/handbook/basics/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2025-08-17 20:54+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2471,7 +2471,7 @@ msgstr ""
 #. type: Table
 #: documentation/content/en/books/handbook/basics/_index.adoc:1135
 #, no-wrap
-msgid "Process file system. Refer to man:procfs[5], man:mount_procfs[8] for details."
+msgid "Process file system. Refer to man:procfs[5] for details."
 msgstr ""
 
 #. type: Table
