--- a/documentation/content/en/books/handbook/jails/_index.po
+++ b/documentation/content/en/books/handbook/jails/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2025-08-17 20:54+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2100,8 +2100,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/jails/_index.adoc:1055
 msgid ""
-"For example, to install package:nginx-lite[] in the jail, the next command "
-"can be executed *from the host*:"
+"For example, to install package:www/nginx-lite[] in the jail, the next "
+"command can be executed *from the host*:"
 msgstr ""
 
 #. type: delimited block . 4
