--- a/documentation/content/en/books/handbook/multimedia/_index.po
+++ b/documentation/content/en/books/handbook/multimedia/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2025-08-17 20:54+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -319,7 +319,7 @@ msgstr ""
 #. type: Table
 #: documentation/content/en/books/handbook/multimedia/_index.adoc:156
 #, no-wrap
-msgid "package:audio/plasma5-plasma-pa[]"
+msgid "package:audio/plasma6-plasma-pa[]"
 msgstr ""
 
 #. type: Table
