--- a/documentation/content/en/books/handbook/virtualization/_index.po
+++ b/documentation/content/en/books/handbook/virtualization/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2025-08-17 20:54+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -4035,7 +4035,7 @@ msgstr ""
 msgid ""
 "        host.hostname = \"your-hostname-here\";\n"
 "        vnet;\n"
-"        vnet.interface = \"em${if}\";\n"
+"        vnet.interface = \"jail${if}\";\n"
 "        path = \"/jails/${name}\";\n"
 "        persist;\n"
 "        securelevel = 3;\n"
@@ -4214,7 +4214,7 @@ msgstr ""
 msgid ""
 "# jexec bhyve\n"
 "# sh /usr/share/examples/bhyve/vmrun.sh -c 1 -m 1024M \\\n"
-"     -t tap100 -d /dev/zvols/zroot/vms/bhyvevm0 -i -I /vms/FreeBSD-14.0-RELEASE-amd64-bootonly.iso bhyvevm0\n"
+"     -t tap100 -d /dev/zvol/zroot/vms/bhyvevm0 -i -I /vms/FreeBSD-14.0-RELEASE-amd64-bootonly.iso bhyvevm0\n"
 msgstr ""
 
 #. type: Block title
@@ -4460,6 +4460,7 @@ msgstr ""
 #. type: Table
 #: documentation/content/en/books/handbook/virtualization/_index.adoc:2190
 #: documentation/content/en/books/handbook/virtualization/_index.adoc:2195
+#: documentation/content/en/books/handbook/virtualization/_index.adoc:2210
 #: documentation/content/en/books/handbook/virtualization/_index.adoc:2215
 #, no-wrap
 msgid "BSD-2"
@@ -4527,7 +4528,6 @@ msgstr ""
 
 #. type: Table
 #: documentation/content/en/books/handbook/virtualization/_index.adoc:2205
-#: documentation/content/en/books/handbook/virtualization/_index.adoc:2210
 #, no-wrap
 msgid "Unknown"
 msgstr ""
