--- a/documentation/content/en/books/porters-handbook/makefiles/_index.po
+++ b/documentation/content/en/books/porters-handbook/makefiles/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-06-29 21:20+0100\n"
+"POT-Creation-Date: 2025-08-17 20:54+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -146,10 +146,9 @@ msgstr ""
 #. type: delimited block = 4
 #: documentation/content/en/books/porters-handbook/makefiles/_index.adoc:106
 msgid ""
-"When updating a port, it is possible to use man:pkg-version[8]'s `-t` "
-"argument to check if the new version is greater or lesser than before.  See "
-"crossref:makefiles[makefile-versions-ex-pkg-version, Using man:pkg-"
-"version\\[8\\] to Compare Versions]."
+"When updating a port, it is possible to use the `-t` argument of man:pkg-"
+"version[8] to check if the new version is greater or lesser than before.  "
+"See below on how to use man:pkg-version[8] to compare versions."
 msgstr ""
 
 #. type: Block title
@@ -4045,9 +4044,8 @@ msgstr ""
 #: documentation/content/en/books/porters-handbook/makefiles/_index.adoc:1586
 msgid ""
 "This creates a versioning scheme that increases over time, and that is still "
-"before version `0` (see crossref:makefiles[makefile-versions-ex-pkg-version, "
-"Using man:pkg-version\\[8\\] to Compare Versions] for details on man:pkg-"
-"version[8]):"
+"before version `0`.  See crossref:makefiles[makefile-versions-ex-pkg-"
+"version, this secion on how to compare versions] using man:pkg-version[8]):"
 msgstr ""
 
 #. type: delimited block . 4
@@ -4145,9 +4143,9 @@ msgstr ""
 #: documentation/content/en/books/porters-handbook/makefiles/_index.adoc:1631
 msgid ""
 "This creates a versioning scheme that increases over time (well, over "
-"commits), and does not conflict with the creation of a `0.7.4` version.  "
-"(See crossref:makefiles[makefile-versions-ex-pkg-version, Using man:pkg-"
-"version\\[8\\] to Compare Versions] for details on man:pkg-version[8]):"
+"commits), and does not conflict with the creation of a `0.7.4` version.  See "
+"crossref:makefiles[makefile-versions-ex-pkg-version, this section for how to "
+"compare versions] using man:pkg-version[8]):"
 msgstr ""
 
 #. type: delimited block . 4
@@ -5295,9 +5293,9 @@ msgstr ""
 #. type: delimited block = 4
 #: documentation/content/en/books/porters-handbook/makefiles/_index.adoc:2279
 msgid ""
-"Elements can be postfixed with `:__n__` where _n_ is `[^:,]+`, that is, _n_ "
-"could conceptually be any alphanumeric string but we will limit it to `[a-zA-"
-"Z_][0-9a-zA-Z_]+` for now."
+"Elements can be postfixed with `:__n__` where _n_ is `[^:,]\\+`, that is, "
+"_n_ could conceptually be any alphanumeric string but we will limit it to "
+"`[a-zA-Z_][0-9a-zA-Z_]+` for now."
 msgstr ""
 
 #. type: delimited block = 4
