--- a/documentation/content/en/books/handbook/dtrace/_index.po
+++ b/documentation/content/en/books/handbook/dtrace/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2025-08-17 20:54+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -80,8 +80,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/dtrace/_index.adoc:67
 msgid ""
-"The official guide to DTrace is maintained by the Illumos project at https://"
-"illumos.org/books/dtrace/bookinfo.html[DTrace Guide]."
+"The official guide to DTrace is maintained by the illumos project at https://"
+"illumos.org/books/dtrace/bookinfo.html[illumos Dynamic Tracing Guide]."
 msgstr ""
 
 #. type: Plain text
@@ -150,29 +150,29 @@ msgstr ""
 #: documentation/content/en/books/handbook/dtrace/_index.adoc:92
 msgid ""
 "Beginning with FreeBSD 10.0-RELEASE, the modules are automatically loaded "
-"when `dtrace` is run."
+"when man:dtrace[1] is run."
 msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/dtrace/_index.adoc:97
 msgid ""
-"FreeBSD uses the `DDB_CTF` kernel option to enable support for loading `CTF` "
-"data from kernel modules and the kernel itself.  `CTF` is the Solaris(TM) "
-"Compact C Type Format which encapsulates a reduced form of debugging "
-"information similar to `DWARF` and the venerable stabs.  `CTF` data is added "
-"to binaries by the `ctfconvert` and `ctfmerge` build tools.  The "
-"`ctfconvert` utility parses `DWARF``ELF` debug sections created by the "
-"compiler and `ctfmerge` merges `CTF``ELF` sections from objects into either "
-"executables or shared libraries."
+"FreeBSD uses the `DDB_CTF` kernel option to enable support for loading "
+"man:ctf[5] data from kernel modules and the kernel itself.  `CTF` is the "
+"Solaris(TM) Compact C Type Format which encapsulates a reduced form of "
+"debugging information similar to `DWARF` and the venerable stabs.  `CTF` "
+"data is added to binaries by the man:ctfconvert[1] and man:ctfmerge[1] build "
+"tools.  The `ctfconvert` utility parses `DWARF` `ELF` debug sections created "
+"by the compiler and `ctfmerge` merges `CTF` `ELF` sections from objects into "
+"either executables or shared libraries."
 msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/dtrace/_index.adoc:104
 msgid ""
 "Some different providers exist for FreeBSD than for Solaris(TM).  Most "
-"notable is the `dtmalloc` provider, which allows tracing `malloc()` by type "
-"in the FreeBSD kernel.  Some of the providers found in Solaris(TM), such as "
-"`cpc` and `mib`, are not present in FreeBSD.  These may appear in future "
+"notable is the `dtmalloc` provider, which allows tracing man:malloc[9] by "
+"type in the FreeBSD kernel.  Some of the providers found in Solaris(TM), "
+"such as `cpc`, are not present in FreeBSD.  These may appear in future "
 "versions of FreeBSD.  Moreover, some of the providers available in both "
 "operating systems are not compatible, in the sense that their probes have "
 "different argument types.  Thus, `D` scripts written on Solaris(TM) may or "
@@ -241,34 +241,24 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/dtrace/_index.adoc:136
 msgid ""
-"This option provides support for `FBT`.  While DTrace will work without this "
-"option, there will be limited support for function boundary tracing."
+"This option provides support for man:dtrace_fbt[4].  While DTrace will work "
+"without this option, there will be limited support for function boundary "
+"tracing."
 msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/dtrace/_index.adoc:140
 msgid ""
 "Once the FreeBSD system has rebooted into the new kernel, or the DTrace "
-"kernel modules have been loaded using `kldload dtraceall`, the system will "
-"need support for the Korn shell as the DTrace Toolkit has several utilities "
-"written in `ksh`.  Make sure that the package:shells/ksh93[] package or port "
-"is installed.  It is also possible to run these tools under package:shells/"
-"pdksh[] or package:shells/mksh[]."
-msgstr ""
-
-#. type: Plain text
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:145
-msgid ""
-"Finally, install the current DTrace Toolkit, a collection of ready-made "
-"scripts for collecting system information.  There are scripts to check open "
-"files, memory, `CPU` usage, and a lot more.  FreeBSD 10 installs a few of "
-"these scripts into [.filename]#/usr/share/dtrace#.  On other FreeBSD "
-"versions, or to install the full DTrace Toolkit, use the package:sysutils/"
-"dtrace-toolkit[] package or port."
+"kernel modules have been loaded using `kldload dtraceall`, install the "
+"current DTrace Toolkit (package:sysutils/dtrace-toolkit[]), a collection of "
+"ready-made scripts for collecting system information.  There are scripts to "
+"check open files, memory, CPU usage, and a lot more.  FreeBSD includes some "
+"scripts in the base system as well; see [.filename]#/usr/share/dtrace#."
 msgstr ""
 
 #. type: delimited block = 4
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:150
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:145
 msgid ""
 "The scripts found in [.filename]#/usr/share/dtrace# have been specifically "
 "ported to FreeBSD.  Not all of the scripts found in the DTrace Toolkit will "
@@ -277,23 +267,24 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:156
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:152
 msgid ""
 "The DTrace Toolkit includes many scripts in the special language of DTrace.  "
 "This language is called the D language and it is very similar to C++.  An in "
-"depth discussion of the language is beyond the scope of this document.  It "
-"is covered extensively in the http://www.dtrace.org/guide[Illumos Dynamic "
-"Tracing Guide]."
+"depth discussion of the language is beyond the scope of this document.  "
+"Refer to the FreeBSD man:d[7] manual page for an overview of the D language "
+"on FreeBSD.  The D language is also covered extensively in the https://"
+"www.illumos.org/books/dtrace/bookinfo.html[illumos Dynamic Tracing Guide]."
 msgstr ""
 
 #. type: Title ==
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:158
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:154
 #, no-wrap
 msgid "Enabling DTrace in Out-of-Kernel Modules"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:161
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:157
 msgid ""
 "To add DTrace support to an out-of-kernel module, which is useful for "
 "development and debugging, include the following line in the module's "
@@ -301,13 +292,13 @@ msgid ""
 msgstr ""
 
 #. type: delimited block . 4
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:165
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:161
 #, no-wrap
 msgid "CFLAGS+= -DKDTRACE_HOOKS\n"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:169
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:165
 msgid ""
 "This flag enables DTrace hooks during compilation, allowing for advanced "
 "debugging and monitoring of the module.  Ensure to recompile the module "
@@ -315,13 +306,13 @@ msgid ""
 msgstr ""
 
 #. type: Title ==
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:171
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:167
 #, no-wrap
 msgid "Using DTrace"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:178
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:174
 msgid ""
 "DTrace scripts consist of a list of one or more _probes_, or instrumentation "
 "points, where each probe is associated with an action.  Whenever the "
@@ -334,27 +325,27 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:180
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:176
 msgid ""
 "To view all probes, the administrator can execute the following command:"
 msgstr ""
 
 #. type: delimited block . 4
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:184
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:180
 #, no-wrap
 msgid "# dtrace -l | more\n"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:188
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:184
 msgid ""
-"Each probe has an `ID`, a `PROVIDER` (dtrace or fbt), a `MODULE`, and a "
-"`FUNCTION NAME`.  Refer to man:dtrace[1] for more information about this "
-"command."
+"Each probe has an `ID`, a `PROVIDER` (e.g., `dtrace` or `fbt`), a `MODULE`, "
+"and a `FUNCTION NAME`.  Refer to man:dtrace[1] for more information about "
+"this command."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:190
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:186
 msgid ""
 "The examples in this section provide an overview of how to use two of the "
 "fully supported scripts from the DTrace Toolkit: the [.filename]#hotkernel# "
@@ -362,14 +353,14 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:193
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:189
 msgid ""
 "The [.filename]#hotkernel# script is designed to identify which function is "
 "using the most kernel time.  It will produce output similar to the following:"
 msgstr ""
 
 #. type: delimited block . 4
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:199
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:195
 #, no-wrap
 msgid ""
 "# cd /usr/local/share/dtrace-toolkit\n"
@@ -378,7 +369,7 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:203
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:199
 msgid ""
 "As instructed, use the kbd:[Ctrl+C] key combination to stop the process.  "
 "Upon termination, the script will display a list of kernel functions and "
@@ -386,7 +377,7 @@ msgid ""
 msgstr ""
 
 #. type: delimited block . 4
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:232
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:228
 #, no-wrap
 msgid ""
 "kernel`_thread_lock_flags                                   2   0.0%\n"
@@ -418,14 +409,14 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:236
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:232
 msgid ""
 "This script will also work with kernel modules.  To use this feature, run "
 "the script with `-m`:"
 msgstr ""
 
 #. type: delimited block . 4
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:255
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:251
 #, no-wrap
 msgid ""
 "# ./hotkernel -m\n"
@@ -447,7 +438,7 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:261
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:257
 msgid ""
 "The [.filename]#procsystime# script captures and prints the system call time "
 "usage for a given process `ID` (`PID`) or process name.  In the following "
@@ -458,7 +449,7 @@ msgid ""
 msgstr ""
 
 #. type: delimited block . 4
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:267
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:263
 #, no-wrap
 msgid ""
 "# ./procsystime -n csh\n"
@@ -467,13 +458,13 @@ msgid ""
 msgstr ""
 
 #. type: delimited block . 4
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:269
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:265
 #, no-wrap
 msgid "Elapsed Times for processes csh,\n"
 msgstr ""
 
 #. type: delimited block . 4
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:289
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:285
 #, no-wrap
 msgid ""
 "         SYSCALL          TIME (ns)\n"
@@ -498,8 +489,8 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/dtrace/_index.adoc:291
+#: documentation/content/en/books/handbook/dtrace/_index.adoc:287
 msgid ""
-"As shown, the `read()` system call used the most time in nanoseconds while "
-"the `getpid()` system call used the least amount of time."
+"As shown, the man:read[2] system call used the most time in nanoseconds "
+"while the man:getpid[2] system call used the least amount of time."
 msgstr ""
