__FreeBSD_version bumped for certctl

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -246,6 +246,11 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |August 17, 2025
 |15.0-CURRENT after introduction of VTYPE_ISDEV(), VN_ISDEV(), and VATTR_ISDEV().
 
+|1500063
+|gitref:c340ef28fd384b567e35882d04ce17fa31b7384f[repository="src",length=12]
+|August 18, 2025
+|15.0-CURRENT after certctl rewrite, which now produces a bundle.
+
 |===
 
 [[versions-14]]
