--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -902,3 +902,5 @@ Information regarding specific video cards and compatibility with Xorg can be fo
 &hwlist.sdhci;
 
 &hwlist.superio;
+
+&hwlist.u2f;
