status: group-changes: address review feedback

--- a/website/content/en/status/report-2025-04-2025-06/group-changes.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/group-changes.adoc
@@ -16,12 +16,12 @@ The vast majority of other platforms do not exhibit this behavior anymore, inclu
 macOS appears to be the only exception found in testing.
 
 The problem is that the vast majority of software in the FreeBSD Ports Collection comes from other platforms, where man:setgroups[2] and man:setgroups[2] operate purely on the supplementary groups.
-This kind of a behavior difference is very subtle and would need to be audited more carefully to be sure that we haven't introduced a potential security issue in ported software.
+This kind of a behavior difference is very subtle and would need to be audited more carefully to be sure that we have not introduced a potential security issue in ported software.
 
-In FreeBSD 15.0, the primary user-facing change is that man:setgroups[2], man:getgroups[2], and man:initgroups[3] behavior will change to match other platforms, and users are requested to be extra vigilient in areas that may be affected as we proceed through the release cycle.
+In FreeBSD 15.0, the primary user-facing change is that man:setgroups[2], man:getgroups[2], and man:initgroups[3] behavior will change to match other platforms, and users are requested to be extra vigilant in areas that may be affected as we proceed through the release cycle.
 In general, the expectation is that this change may:
 
-* Fix some small number of bugs where we'd have lost either our expected effective group membership or one of the supplementary groups we should have been in
-* (Less likely) Introduce some even smaller number of bugs where something expected man:setgroups[2] to change our effective group membership but now it's just a supplementary group and our effective group-ID is unchanged
+* Fix some small number of bugs where we would have lost either our expected effective group membership or one of the supplementary groups we should have been in
+* (Less likely) Introduce some even smaller number of bugs where something expected man:setgroups[2] to change our effective group membership but now it is just a supplementary group and our effective group-ID is unchanged
 
 Software included in the base system is largely unaffected or improved by this change, with OpenSSH being a notable example of a link:https://cgit.freebsd.org/src/commit/?id=239e8c98636a7578cc67a6f9d54d14c71b095e36[strange bug] caused by the historical implementation.
