status/srcmgr: fix a typo

--- a/website/content/en/status/report-2025-04-2025-06/srcmgr.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/srcmgr.adoc
@@ -5,7 +5,7 @@ Contact: srcmgr <srcmgr@FreeBSD.org>
 The srcmgr@ team aims to make src developers more productive, and works to manage the large number of bug reports, pull requests and code reviews that we receive.
 link:https://github.com/freebsd/meetings/tree/master/srcmgr[Meeting minutes] are available on GitHub.
 
-We held a bug-busting session on 2025-05-23 with about 10 atteendees.
+We held a bug-busting session on 2025-05-23 with about 10 attendees.
 
 Members of srcmgr@ gave a link:https://wiki.freebsd.org/DevSummit/202506?action=AttachFile&do=view&target=srcmgr+happenings.pdf[presentation] at the 2025 FreeBSD developer summit in Ottawa.
 
