committers guide: fix broken link
Remove a line break that prevented the link markup from working properly.

Reported by:    jmg

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -188,8 +188,7 @@ Rather than suggest a single way, here are some links to sites that describe var
 Protect the private key and passphrase.
 If either the private key or passphrase may have been compromised or disclosed, immediately notify mailto:accounts@FreeBSD.org[accounts@FreeBSD.org] and revoke the key.
 
-Committing the new key is shown in crossref:committers-guide[commit-steps, Steps
-for New Committers].
+Committing the new key is shown in crossref:committers-guide[commit-steps, Steps for New Committers].
 
 [[kerberos-ldap]]
 == Kerberos and LDAP web Password for FreeBSD Cluster
