Status/2025Q2/cfc.adoc: Fix suggested by vale

--- a/website/content/en/status/report-2025-04-2025-06/cfc.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/cfc.adoc
@@ -61,7 +61,7 @@ Quarterly Updates
 * Miscellaneous:
   ** The tutorials pertaining to DragonFly BSD, OpenBSD and NetBSD have undergone comprehensive translation, updating and rewriting.
   ** Several GitHub Actions have been added to verify that images are referenced correctly.
-  ** We now support exporting _FreeBSD-Ask_ to the EPUB format.
+  ** We now support exporting _FreeBSD-Ask_ to the ePub format.
   ** A tutorial about the package:security/py-fail2ban[] port (utilizing man:ipfw[4], man:pf[4], and man:ipf[4]) has been submitted to the FreeBSD Journal for review.
 
 It is hoped that an increasing number of contributors will join the documentation efforts.
