--- a/website/content/en/status/report-2025-07-2025-09/sockstat.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/sockstat.adoc
@@ -6,7 +6,7 @@ link:https://github.com/freebsd/freebsd-src/pull/1720[Automatic column sizing PR
 link:https://github.com/freebsd/freebsd-src/pull/1746[Reintroduced -w flag PR] URL: https://github.com/freebsd/freebsd-src/pull/1746[] +
 link:https://github.com/freebsd/freebsd-src/pull/1770[Libxo support PR] URL: https://github.com/freebsd/freebsd-src/pull/1770[] +
 
-Contact: Damin Rido <rido@freebsd.org>
+Contact: Damin Rido <rido@FreeBSD.org>
 
 Sockstat is a command-line tool in FreeBSD that displays detailed information about open network sockets.
 However, its traditional fixed-width formatting made the output hard to read, especially when handling long addresses.
